
syntax = "proto3";


enum Status {
  PENDING = 0;
  PROCESSING = 1;
  ERROR = 2;
  SUCCESS = 3;
  PARTIAL = 4;
  DELEGATED = 5;
  RESULTS = 6;
  PAYMENT_REQUIRED = 7;
  UNKNOWN=99;
}

message JobParam {
  string key = 1;
  repeated string value = 2;
}

message JobInput {
  optional string data = 1;
  optional string ref = 2;
  string type = 3;
  string marker = 4; 
  optional string source = 5;  
}

message Log {
  string id=1;
  string log = 2;
  string level = 3;
  uint64 timestamp = 4;
  string source = 5;
}

message JobState {
  uint64 acceptedAt = 13;
  string acceptedBy = 14;
  Status status = 15;
  repeated Log logs = 17;
  uint64 timestamp = 18;
  // repeated string partials = 16;
}

message JobResult {
  string content = 1;
  uint64 timestamp = 2;
  string id = 3;
}


message Job {
  string id = 1;

  string runOn = 2;
  uint64 expiration = 3;
  uint64 timestamp = 4;

  repeated JobInput input = 5; // primary input
  repeated JobParam param = 6; // additional parameters
  
  string customerPublicKey = 7; 
  string description = 8;
  string provider = 9;

  repeated string relays = 10;

  JobResult result = 12;
  JobState state = 11;
  
  uint64 maxExecutionTime = 13; // enforced by the provider
  // map<string,JobResult> results = 12;

  // map<string,JobState> states = 11;
  


 
}